--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,10 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
+.env
+.firebase
+firebase.json
+.firebaserc
 node_modules
 dist
 dist-ssr
