Fixed Footer styling

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_KEY="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"
+VITE_OPENAI_KEY="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"
