Removed openai from frontend

--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "build:deploy":"env-cmd .env npm run build && firebase deploy -P p-captions"
+    "build:deploy": "env-cmd .env npm run build && firebase deploy -P p-captions"
   },
   "dependencies": {
+    "axios": "^1.3.2",
     "env-cmd": "^10.1.0",
-    "openai": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
